adds label indicator

--- a/index.html
+++ b/index.html
@@ -62,12 +62,21 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-10 mt-5">
+       <p class="label-indicator"> <span class="dot strong"></span> كلمة سر قوية </p>  
+       <p class="label-indicator"><span class="dot medium-strong"></span> كلمة سر متوسطة القوة</p> 
+       <p class="label-indicator"> <span class="dot medium"></span> كلمة سر متوسطة</p>
+       <p class="label-indicator"> <span class="dot weak"></span> كلمة سر ضعيفة</p> 
+       <p class="label-indicator"> <span class="dot very-weak"></span> كلمة سر ضعيفة جدا</p>
+    </div>
+</div>
 
 <div id="password" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="hidePassword()">&times;</a>
     <div class="overlay-content" id="password_content">
-
     </div>
+    
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.2.0/zxcvbn.js"></script>
