trying to fix responsive

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-10 mt-5">
+    <div class="col-md-10 col-xl-8 col-lg-11 col-sm-11 mt-5">
        <p class="label-indicator"> <span class="dot strong"></span> كلمة سر قوية </p>  
        <p class="label-indicator"><span class="dot medium-strong"></span> كلمة سر متوسطة القوة</p> 
        <p class="label-indicator"> <span class="dot medium"></span> كلمة سر متوسطة</p>
