--- a/index.html
+++ b/index.html
@@ -63,13 +63,25 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-10 col-xl-8 col-lg-11 col-sm-11 mt-5">
-       <p class="label-indicator"> <span class="dot strong"></span> كلمة سر قوية </p>  
-       <p class="label-indicator"><span class="dot medium-strong"></span> كلمة سر متوسطة القوة</p> 
-       <p class="label-indicator"> <span class="dot medium"></span> كلمة سر متوسطة</p>
-       <p class="label-indicator"> <span class="dot weak"></span> كلمة سر ضعيفة</p> 
-       <p class="label-indicator"> <span class="dot very-weak"></span> كلمة سر ضعيفة جدا</p>
-    </div>
+        <div class="col-md-2">
+            <p class="label-indicator"> <span class="dot strong"></span> كلمة سر قوية </p>  
+
+        </div>
+        <div class="col-md-3">
+            <p class="label-indicator"><span class="dot medium-strong"></span> كلمة سر متوسطة القوة</p> 
+   
+        </div>
+        <div class="col-md-2">
+            <p class="label-indicator"> <span class="dot medium"></span> كلمة سر متوسطة</p>
+
+        </div>
+        <div class="col-md-2">
+            <p class="label-indicator"> <span class="dot weak"></span> كلمة سر ضعيفة</p> 
+
+        </div>
+        <div class="col-md-2">
+            <p class="label-indicator"> <span class="dot very-weak"></span> كلمة سر ضعيفة جدا</p>
+        </div>
 </div>
 
 <div id="password" class="overlay">
