--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row mt-5">
         <div class="col-md-2">
             <p class="label-indicator"> <span class="dot strong"></span> كلمة سر قوية </p>  
 
